API: Fix small issue with setting up new account Web: Update CORS instruction in README Web: Fixed text fields which were too wide in Chrome

--- a/Web/src/App.css
+++ b/Web/src/App.css
@@ -1,3 +1,10 @@
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  .inputStyle {
+    max-width: 200px !important;
+  } 
+}
+
+
 @media only screen and (max-width: 600px) {
   .column {
     margin-right: unset !important;
